# GROUP1_HEART-DISEASE-

./: EDA_Data_preeprocessing.ipynb  Evaluating ML Models for Heart Disease Prediction.ipynb  Feature_selection.py  Heart Disease Classification.ipynb  README.md  heart.ipynb  pyproject.toml
.ipynb_checkpoints/: EDA_Data_preeprocessing-checkpoint.ipynb  Heart Disease Classification-checkpoint.ipynb
